--- a/sign_in.html
+++ b/sign_in.html
@@ -8,5 +8,14 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 	</head>
 	<body>
+		<form>
+			<h1>Sign in</h1>
+			<input class="infos" type="text" placeholder="Username" required/>
+			<input class="infos" type="password" placeholder="Password" required/>
+			<a href="">Forgot Password?</a>
+			<input type="submit" value="LOGIN"/>
+		</form>
+		<p>Dont have an account? <a>Register here.</a></p>
+		<hr>
 	</body>
 </html>
