--- a/profile/profile.html
+++ b/profile/profile.html
@@ -25,14 +25,23 @@
     </div>
     
     <div class="input-container">
-        <input type="password" id="currentPassword" value="password123" disabled>
+        <div class="password-field">
+            <input type="password" id="currentPassword" value="password123" disabled>
+            <img src="../z-media/show.png" alt="Show Password" class="eye-icon" onclick="togglePassword('currentPassword')">
+        </div>
         <img src="../z-media/edit.png" alt="Edit" class="icon" onclick="enablePasswordEdit()">
     </div>
     <div class="input-container password-fields" style="display: none;">
-        <input type="password" id="newPassword" placeholder="Enter new password" oninput="validatePasswords()">
+        <div class="password-field">
+            <input type="password" id="newPassword" placeholder="Enter new password" oninput="validatePasswords()">
+            <img src="../z-media/show.png" alt="Show Password" class="eye-icon" onclick="togglePassword('newPassword')">
+        </div>
     </div>
     <div class="input-container password-fields" style="display: none;">
-        <input type="password" id="confirmPassword" placeholder="Confirm new password" oninput="validatePasswords()">
+        <div class="password-field">
+            <input type="password" id="confirmPassword" placeholder="Confirm new password" oninput="validatePasswords()">
+            <img src="../z-media/show.png" alt="Show Password" class="eye-icon" onclick="togglePassword('confirmPassword')">
+        </div>
         <img src="../z-media/save.png" alt="Save" class="icon save-icon" id="saveIcon3" onclick="savePassword()">
     </div>    
     <p id="passwordError" style="color: red; display: none;">Passwords do not match or current password is incorrect.</p>
