--- a/main/main.html
+++ b/main/main.html
@@ -13,11 +13,11 @@
     <div id="header-div">
       <header>
         <div id="profile-pic-div">
-          <img id="user-icon" src="../z-media/user.png" alt="user-pic">
+          <img id="user-icon" src="../z-media/profile.png" alt="user-pic">
           <h1 style="color: aliceblue; margin-left: 2%;">Player Name</h1>
         </div>
         <div id="setting-pic-div">
-          <img id="setting-icon" src="../z-media/setting.png" alt="setting-pic">
+          <img id="setting-icon" src="../z-media/setting.png" alt="setting-pic" onclick="window.location.href='../profile/profile.html'">
         </div>
       </header>
     </div>
@@ -33,6 +33,19 @@
         </div>
       </div>      
     </div>
+    <script>
+        // Check login status when page loads
+        if (!sessionStorage.getItem('isLoggedIn')) {
+            window.location.replace('../login/login.html');
+        }
+        
+        // Prevent back navigation after logout
+        window.onpopstate = function(event) {
+            if (!sessionStorage.getItem('isLoggedIn')) {
+                window.location.replace('../login/login.html');
+            }
+        };
+    </script>
   </body>
 
 </html>
